Updated site.css to fix image not fit on 'More Info' card

--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -30,7 +30,7 @@ for details on configuring this project to bundle and minify static web assets. 
 }
 
 .modal .card-img {
-  height: 500px;
+  height: 230px;
   vertical-align: bottom;
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
